# src/controllers/game.controller.ts
@@ -1,6 +1,7 @@
-import { Body, Controller, Get, Route, Tags } from "tsoa";
+import { Body, Controller, Get, Route, Tags, Path, Post, Patch } from "tsoa";
 import { GameDTO } from "../dto/game.dto";
-import { gameService } from "../services/game.service";
+import { GameService, gameService } from "../services/game.service";
+import { notFound } from "../error/NotFoundError";
 
 @Route("games")
 @Tags("Games")
@@ -8,5 +9,33 @@ export class GameController extends Controller {
   @Get("/")
   public async getAllGames(): Promise<GameDTO[]> {
     return gameService.getAllGames();
+  }
+
+  @Get("{id}")
+  public async getGameById(@Path() id: number): Promise<GameDTO | null>{
+    const console = await gameService.getGameById(id);
+    if(!console){
+      notFound("game");
+    } 
+    return console;
+  } 
+
+  @Post("/")
+  public async createGame(
+    @Body() requestBody: GameDTO
+  ): Promise<GameDTO> {
+    const { title, console} = requestBody;
+    return gameService.createGame(title, console);
+  }
+
+  @Patch("{id}")
+  public async updateGame(
+    @Path() id: number,
+    @Body() requestBody: GameDTO
+  ): Promise<GameDTO | null> {
+    const { title, console } = requestBody;
+
+    return gameService.updateGame(id, title, console);
+
   }
 }
